# ai_service_kda4

./: a.json  a.py  day1.ipynb  day2.ipynb  day2_explain.Excalidraw  day3.ipynb  day4.ipynb  day5.ipynb  day7_1.py  day7_2.py  day7_3_todos.py  day7_4_mediapipe.py  day7_5.py  day8_1_main.py  day8_2_login.py  day8_render.py  fastAPI.py  fastapi.ipynb  index.html  pyproject.toml  requirements.txt  test.docx
MY_VIBE_CODING/: pochacco_game.html  pochacco_todolist.html  vibe_coding.ipynb  기획서.md  기획서_Pochacco Todo Calendar.md.md
my_Chroma_IU/: chroma.sqlite3
my_WorldCup_DB/: chroma.sqlite3
static/: style.css
templates1/: index.html
