[project]
name = "ai-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "chromadb>=1.5.9",
    "fastapi[standard]>=0.137.1",
    "google-genai>=2.8.0",
    "gradio>=6.18.0",
    "langchain>=1.3.9",
    "langchain-anthropic>=1.4.6",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.7",
    "langchain-google-genai>=4.2.5",
    "langchain-openai>=1.3.2",
    "langchain-tavily>=0.2.18",
    "mediapipe>=0.10.35",
    "numpy>=2.4.6",
    "openai>=2.41.1",
    "pandas>=2.3.3",
    "pydub>=0.25.1",
    "pykrx>=1.2.8",
    "pypdf>=6.13.3",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "redis>=8.0.0",
    "requests>=2.34.2",
    "setuptools<81",
    "tiktoken>=0.13.0",
    "yt-dlp>=2026.6.9",
]
